tests/pass/test-if1.mc
int main()
{
  if (true) printf("%d\n", 42);
  printf("%d\n", 17);
  return 0;
}
